Modified overflow in container animacion to fix error in presentacion page

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -479,7 +479,7 @@ button a {
 /* ANIMATIONS */
 
 .container-animacion {
-      overflow-x: clip;
+      overflow-x: hidden;
       padding-bottom: 10px;
 }
 
